# shengwanwu

./: LICENSE  README.md  pyproject.toml  requirements.txt  server.py  shengwanwu-app.jsx
docs/: latest_hypothesis_success_v04.md  shengwanwu_v03_final.html  venus_hypotheses_v03.html  venus_physics_v03.html  venus_planetary_science_v04_spine.html
examples/venus_cloud/: graph_edges.jsonl  node_store.jsonl  source_catalog.jsonl  venus_physics_ranked.json  venus_ranked_results.json
examples/venus_planetary_science_v05_t1/: README.md
examples/venus_planetary_science_v05_t1/knowledge_base/: gaps.jsonl  hypotheses.jsonl  lineage.jsonl  mother_patch.jsonl  nodes.jsonl  review_state.jsonl  sources.jsonl  validations.jsonl  world_model.md
examples/venus_planetary_science_v05_t1/run/: artifact_cards.jsonl  final_report.md  relations.jsonl  return_contract.md
examples/venus_planetary_v04_spine/: artifact_cards.jsonl  final_report.md  loop_state.json  return_contract.md
examples/world_models/: graph_edges.jsonl  node_store.jsonl  source_catalog.jsonl
shengwanwu/: collect_rank.py  hypothesis_scan_v02.py  physics_hypotheses.py  reconstruct_v03.py
shengwanwu_loop/: __init__.py  cli.py  graph.py  v04.py
tests/: test_graph_smoke.py  test_relations_t1.py  test_v04_smoke.py
